--- a/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/acompanhamento-estagio.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/estagiario/acompanhamento-estagio.html
@@ -37,6 +37,15 @@
   				<button type="button" class="close" data-dismiss="alert">&times;</button>
   				<p th:text="${sucesso}"></p>
 			</div>
+			
+          <ul class="list-group" th:if="${presencas != null}">
+            <li class="list-group-item gp-list-group-item" th:each= "presenca: ${presencas}">
+              <b th:inline="text">[[${presenca.estagio.turma.nome}]] [[${presenca.estagio.turma.semestre}]]</b>
+              <a th:href="@{/Estagiario/Acompanhamento/{idEstagio}/PresencaEntrada(idEstagio=${presenca.estagio.id})}" class="btn btn-success btn-sm pull-right gp-btn-presenca" th:if="${presenca.permissaoEntrada}">Entrada</a>
+              <a th:href="@{/Estagiario/Acompanhamento/{idEstagio}/PresencaSaida(idEstagio=${presenca.estagio.id})}" class="btn btn-success btn-sm pull-right gp-btn-presenca" th:if="${presenca.permissaoSaida}">Saída</a>
+            </li>
+          </ul>
+			
 	     
 	     <div class="panel panel-bluegray">
 	          <div class="panel-heading">
