Verificação de choque de horário de agendamento de reposição e expediente

--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/gerenciar-frequencias.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/gerenciar-frequencias.html
@@ -156,7 +156,7 @@
 					<div class="form-group">
 				    	<label for="dataReposicao" class="col-lg-1 control-label">Data</label>
 				    	<div class="col-lg-6">
-				    		<input type="text" class="form-control data-reposicao data" id="dataReposicao" name="dataReposicao" required="required" placeholder="dd/MM/aaaa"/>
+				    		<input type="text" class="form-control data" id="dataReposicao" name="dataReposicao" required="required" placeholder="dd/MM/aaaa"/>
 				    		<label th:if="${!#strings.isEmpty(errorData)}" th:text="${errorData}" class="color-error"></label>
 				  		</div>
 				  	</div>
