--- a/aplicacoes/gestao-estagio/src/main/resources/static/css/aplicacao.css
+++ b/aplicacoes/gestao-estagio/src/main/resources/static/css/aplicacao.css
@@ -181,9 +181,10 @@ a.btn.gp-btn-opcao:active, a.btn.gp-btn-opcao:visited {
 	text-align: left !important;
 	font-weight: bold;
 }
-tr:nth-child(1) td {
-	border: none !important;
-}
+
+/* tr:nth-child(1) td { */
+/* 	border: none !important; */
+/* } */
 
 #consolidado a + a{
 	margin-left: 11px;
